reference, statistiky cryptomarketu

--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -84,7 +84,130 @@
   pages={281--310},
   year={2015}
 }
+@article{martin2014lost,
+  title={Lost on the Silk Road: Online drug distribution and the ‘cryptomarket’},
+  author={Martin, James},
+  journal={Criminology \& Criminal Justice},
+  volume={14},
+  number={3},
+  pages={351--367},
+  year={2014},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{dolliver2016characteristics,
+  title={Characteristics of drug vendors on the Tor network: a cryptomarket comparison},
+  author={Dolliver, Diana S and Kenney, Jennifer L},
+  journal={Victims \& Offenders},
+  volume={11},
+  number={4},
+  pages={600--620},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
 
+@article{broseus2016studying,
+  title={Studying illicit drug trafficking on Darknet markets: structure and organisation from a Canadian perspective},
+  author={Bros{\'e}us, Julian and Rhumorbarbe, Damien and Mireault, Caroline and Ouellette, Vincent and Crispino, Frank and D{\'e}cary-H{\'e}tu, David},
+  journal={Forensic science international},
+  volume={264},
+  pages={7--14},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{decary2017repeat,
+  title={Are repeat buyers in cryptomarkets loyal customers? Repeat business between dyads of cryptomarket vendors and users},
+  author={D{\'e}cary-H{\'e}tu, David and Quessy-Dor{\'e}, Olivier},
+  journal={American Behavioral Scientist},
+  volume={61},
+  number={11},
+  pages={1341--1357},
+  year={2017},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{aldridge2017delivery,
+  title={Delivery dilemmas: How drug cryptomarket users identify and seek to reduce their risk of detection by law enforcement},
+  author={Aldridge, Judith and Askew, Rebecca},
+  journal={International Journal of Drug Policy},
+  volume={41},
+  pages={101--109},
+  year={2017},
+  publisher={Elsevier}
+}
+@article{decary2016going,
+  title={Going international? Risk taking by cryptomarket drug vendors},
+  author={D{\'e}cary-H{\'e}tu, David and Paquet-Clouston, Masarah and Aldridge, Judith},
+  journal={International Journal of Drug Policy},
+  volume={35},
+  pages={69--76},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{walsh2011drugs,
+  title={Drugs, the Internet and change},
+  author={Walsh, Charlotte},
+  journal={Journal of psychoactive drugs},
+  volume={43},
+  number={1},
+  pages={55--63},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+@article{barratt2014use,
+  title={Use of Silk Road, the online drug marketplace, in the United Kingdom, Australia and the United States},
+  author={Barratt, Monica J and Ferris, Jason A and Winstock, Adam R},
+  journal={Addiction},
+  volume={109},
+  number={5},
+  pages={774--783},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+@article{van2013silk,
+  title={‘Silk Road’, the virtual drug marketplace: A single case study of user experiences},
+  author={Van Hout, Marie Claire and Bingham, Tim},
+  journal={International Journal of Drug Policy},
+  volume={24},
+  number={5},
+  pages={385--391},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{dolliver2015criminogenic,
+  title={Criminogenic Asymmetries in Cyberspace: A Comparative Analysis of Two Tor Marketplaces},
+  author={Dolliver, Diana S and Love, Katherine L},
+  journal={Journal of Globalization Studies},
+  volume={6},
+  number={2},
+  pages={75--96},
+  year={2015},
+  publisher={Общество с ограниченной ответственностью" Издательство" Учитель"}
+}
+
+@inproceedings{christin2013traveling,
+  title={Traveling the Silk Road: A measurement analysis of a large anonymous online marketplace},
+  author={Christin, Nicolas},
+  booktitle={Proceedings of the 22nd international conference on World Wide Web},
+  pages={213--224},
+  year={2013},
+  organization={ACM}
+}
+@article{barratt2012silk,
+  title={Silk Road: eBay for drugs},
+  author={Barratt, Monica J},
+  journal={Addiction},
+  volume={107},
+  number={3},
+  pages={683--683},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+@article{aldridge2014not,
+  title={Not an'Ebay for Drugs': the Cryptomarket'Silk Road'as a paradigm shifting criminal innovation},
+  author={Aldridge, Judith and D{\'e}cary-H{\'e}tu, David},
+  year={2014}
+}
 @BOOK{fbi10,
   publisher    = {Federal bureau of investigation},
   date      = {2011},
